prevent css animation jitter, fix spacing on comments form

--- a/app/assets/stylesheets/application/style.css
+++ b/app/assets/stylesheets/application/style.css
@@ -197,12 +197,17 @@ a img {border: none; }
   cursor:pointer;
 }
 
+.article_wrapper .article_body .comments-container {
+	overflow: hidden;
+}
+
 .comments-container {
   display: none;
 }
 
 .comments-container fieldset {
   border: none;
+	padding-left: 0px;
 }
 
 .comments-container p { margin: 0 0 14px 0; float: left; width: 100%;  }
@@ -550,10 +555,6 @@ html[xmlns] .clearfix {
 .article_container .comments-container {
 	display: block;
 }
-
-	.article_container .comments-container fieldset{
-		padding-left: 0px;
-	}
 
 .article_container .comments-header {
 	font-size: 16px;
